# strategic-agent-games

./: .gitignore  README.md  agent.py  agent_debug.py  agent_deploy.py  agent_watsonx.py  agent_with_builtin_prompts.py  agents.py  arena_data.db-shm  arena_data.db-wal  pyproject.toml  run_arena.py  seed_matches.py
arena/: __init__.py
arena/experiment/: runner.py
arena/games/: README.md  builtins.py
arena/games/all_pay_auction/: __init__.py  game.py
arena/games/centipede/: __init__.py  game.py
arena/games/common_agency/: __init__.py  game.py
arena/games/cournot/: __init__.py  game.py
arena/games/dictator/: __init__.py  game.py
arena/games/dutch_auction/: __init__.py  game.py
arena/games/english_auction/: __init__.py  game.py
arena/games/hold_up/: __init__.py  game.py
arena/games/insurance_moral_hazard/: __init__.py  game.py
arena/games/principal_agent/: game.py
arena/games/public_project/: __init__.py  game.py
arena/games/sequential_investment/: __init__.py  game.py
arena/games/trust/: __init__.py  game.py
arena/games/voluntary_contribution/: __init__.py  game.py
arena/games/war_of_attrition/: __init__.py  game.py
arena/games/werewolf/: __init__.py  game.py
arena/server/: server.py
arena/spec/: schema.py
dashboard/: index.html  package-lock.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Badge.tsx  Card.tsx  EventRow.tsx  GridBackground.tsx  Layout.tsx
dashboard/src/pages/: GamesPage.tsx  HistoryPage.tsx  (+1 more)
tests/: ww_e2e.py  ww_edge.py  ww_server_it.py  ww_session_inproc.py
(+5 files in other folders)
