[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic-agent-games"
version = "0.2.0"
description = "Strategic Agent Games: multi-agent negotiation arena with a live web dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["negotiation", "multi-agent", "game-theory", "llm", "arena"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "starlette>=0.27",
    "uvicorn>=0.30",
    "httpx>=0.24",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["arena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
